(style) fix body overflow-x. Fix Header z-index

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,4 +4,5 @@
     display: block;
     margin-top: 5rem;
     width: 100vw;
+    overflow-x: hidden;
 }
