--- a/client/src/components/Layout/header.module.scss
+++ b/client/src/components/Layout/header.module.scss
@@ -35,7 +35,7 @@
     margin: 0;
     padding: 0 1.5rem;
     position: fixed;
-    z-index: 100;
+    z-index: 1000;
     top: 0;
     width: 100%;
     background-color: color.$dark;
